--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <button onclick="generateRandomNotifications()">Nhấn vào đây nè</button>
   <script src="./script.js"></script>
   <audio controls autoplay loop>
-    <source src="" type="audio/mpeg">
+    <source src="nhoem.mp3" type="audio/mpeg">
     Trình duyệt của bạn không hỗ trợ phát nhạc.
 </audio>
   <body>
