--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Anh có điều muốn nói</h1>
   <button onclick="generateRandomNotifications()">Nhấn vào đây nè</button>
   <script src="./script.js"></script>
-  <audio controls autoplay loop>
+  <audio autoplay loop>
     <source src="nhoem.mp3" type="audio/mpeg">
     Trình duyệt của bạn không hỗ trợ phát nhạc.
 </audio>
