--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <h1>Anh có điều muốn nói</h1>
   <button onclick="generateRandomNotifications()">Nhấn vào đây nè</button>
   <script src="./script.js"></script>
-  <audio loop>
-    <source src="nhoem.mp3" type="audio/mpeg">
-    Trình duyệt của bạn không hỗ trợ phát nhạc.
+<audio autoplay loop>
+    <source src="" type="audio/mpeg">
 </audio>
   <body>
 </html>
