--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <h1>Anh có điều muốn nói</h1>
   <button onclick="generateRandomNotifications()">Nhấn vào đây nè</button>
   <script src="./script.js"></script>
+  </head>
+
+  <body>
 <audio autoplay loop>
     <source src="nhoem.mp3" type="audio/mpeg">
 </audio>
