--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     Trình duyệt của bạn không hỗ trợ phát nhạc.
   </audio>
 
-  <!-- Nhạc thứ hai -->
-  <audio id="extraMusic" controls>
+  <!-- Nhạc thứ hai tự động phát -->
+  <audio autoplay loop>
     <source src="nhoem.mp3" type="audio/mpeg">
     Trình duyệt của bạn không hỗ trợ phát nhạc.
   </audio>
